--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,19 @@
 /node_modules
+.DS_Store
+.idea
+# dependencies
+/.pnp
+.pnp.js
+# testing
+/coverage
+# production
+/build
+# misc
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
